<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/showNeoFragment"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="Search Neows" />
    <item
        android:id="@+id/storedNeoFragment"
        android:icon="@android:drawable/ic_menu_save"
        android:title="Saved Neows" />
</menu>